--- a/packages/esm-patient-chart-app/src/visit/visit-form/visit-form.scss
+++ b/packages/esm-patient-chart-app/src/visit/visit-form/visit-form.scss
@@ -12,13 +12,12 @@
 }
 
 .heading {
-  @include type.type-style("heading-03");
-
+  @include type.type-style('heading-03');
   margin: spacing.$spacing-05;
 }
 
 .sectionTitle {
-  @include type.type-style("heading-compact-02");
+  @include type.type-style('heading-compact-02');
   color: $text-02;
   margin: 0 0 spacing.$spacing-03 0;
 }
@@ -45,8 +44,13 @@
 .form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: calc(100vh - 6rem);
+  justify-content: start;
+  height: var(--desktop-workspace-window-height);
+}
+
+.buttonSet {
+  margin-top: auto;
+  justify-self: end;
 }
 
 .button {
@@ -83,7 +87,7 @@
 }
 
 .label {
-  @include type.type-style("label-01");
+  @include type.type-style('label-01');
   color: $text-02;
 }
 
@@ -103,5 +107,9 @@
         flex-basis: 70%;
       }
     }
+  }
+
+  .form {
+    height: var(--tablet-workspace-window-height);
   }
 }
